// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CancelIcon matches snapshot 1`] = `
<span
  charSet="utf-8"
  className="hover-pointer"
  dangerouslySetInnerHTML={
    Object {
      "__html": "❌",
    }
  }
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  style={
    Object {
      "color": "#888",
      "fontSize": "18pt",
      "position": "absolute",
      "right": 5,
      "top": 5,
    }
  }
  tabIndex={0}
  title="Cancel"
/>
`;

exports[`SearchIcon matches snapshot 1`] = `
<span
  charSet="utf-8"
  dangerouslySetInnerHTML={
    Object {
      "__html": "⚲",
    }
  }
  style={
    Object {
      "color": "#888",
      "fontSize": "20pt",
      "left": "6pt",
      "position": "absolute",
      "top": "3pt",
      "transform": "rotate(-45deg)",
    }
  }
/>
`;
